# pdf_RAG

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  pyproject.toml  run.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: main.py  server.py
app/db/: client.py  db.py
app/db/collections/: files.py
app/queue/: q.py  workers.py
app/utils/: file.py
